# NexusX

./: .gitignore  Phases.md  README.JP.md  README.md  Readme.jp.md  chart.py  docker-compose.yml  marketing.md  pages.md  table.md  名称未設定ファイル.drawio
.github/: dependabot.yml
api-server/: .gitignore  Dockerfile  demo2.py  demo3.py  demo_data_creater.py  pyproject.toml
api-server/.ebextensions/: environment.config
api-server/.elasticbeanstalk/: config.yml
api-server/app/: logging_config.py  main.py
api-server/app/graphql/: resolvers.py  schema.py  types.py
api-server/app/utils/: auth.py  database.py  email.py  favorite_utils.py  neo4j_utils.py  search_utils.py
api-server/db/: database.py  database_creation.sql
api-server/tests/: test_auth.py
api-server/tests/utils/: auth_test.py
backend/: .gitignore  demo_data_creater.py  dp.py  logging_config.py  nohup.out  pyproject.toml  requirements.txt
documents/: Readme_JP.md  algorithm.md  app_bahaviour.md  app_workflow.md  automated_operation_strategy.md  competitive_analysis.md  components_plan.md  data.md  databases_architecture.md  develpment_phases_workflow.md  docker_contena_archtecture.md  feedback_plan.md  functional_requirement.md  how_to_get_datas.md  infra_and_database3.md  memo_pages.md  movement.md  new_new_database_plan.md  new_tabbles_plan.md  non_functional_elements.md  plan_for_apprentice.md  premium_and_free_pran.md  presentation.md  roadmap.md  screen_transition_diagram.md  table.md  tables.md  tech_stacks.md  truth_database_plan.md  userdata_security.md  utilize_data.md  wire_frame.md
(+638 files in other folders)
